--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.formatting.provider": "black",
-    "python.analysis.extraPaths": [
-        "${workspaceFolder}/src"
-    ]
+    "python.linting.mypyEnabled": true,
+    "python.linting.enabled": true,
+    "AREPL.pythonPath": "${workspaceFolder}/src",
+    "python.analysis.typeCheckingMode": "off"
 }
